updated the code base

--- a/Module 6/flask-docker/Dockerfile
+++ b/Module 6/flask-docker/Dockerfile
@@ -1,5 +1,5 @@
 # step 1 - mention the base operating system
-FROM python3.7:latest
+FROM python:3.7
 
 
 # creating a worksing directory with the name "app"
@@ -7,9 +7,9 @@ WORKDIR /app
 # copying the files of current folder to the app folder inside the container
 COPY . /app
 #install the libraries and packages
-RUN pip --no-cache-dir install -r requirements.txt
-
+RUN pip install -r requirements.txt
+RUN ls
 EXPOSE 5000
-ENTRYPOINT ["python3"]
+ENTRYPOINT ["python"]
 CMD ["webapp.py"]
 
